# termgpt

./: Cargo.toml  README.md
src/: config.rs  gpt.rs  lib.rs  main.rs  prompt.rs
