[package]
name = "rgpt"
authors = ["Gokul <@bahdotsh>"]
version = "0.1.0"
edition = "2021"
description = "Cli tool to interact with chatgpt"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
directories = "5.0.1"
eyre = "0.6.8"
serde = { version = "1.0.162", features = ["derive"] }
toml = "0.7.3"
toml_edit = "0.19.8"
